Rmd supoort, memory mgmt etc

--- a/config.json
+++ b/config.json
@@ -9,6 +9,11 @@
       "name": "inventory", 
       "path": "./apps/inventory",
       "port": 3002
+    },
+    {
+      "name": "reports",
+      "path": "./apps/reports",
+      "port": 3003
     }
   ],
   "restart_delay": 5,
