added management page

--- a/config.json
+++ b/config.json
@@ -18,6 +18,7 @@
   ],
   "proxy_port": 3838,
   "proxy_host": "localhost",
+  "management_port": 3839,
   "restart_delay": 5,
   "health_check_interval": 10,
   "log_dir": "./logs"
