--- a/config.json
+++ b/config.json
@@ -2,7 +2,8 @@
   "apps": [
     {
       "name": "sales",
-      "path": "./apps/sales"
+      "path": "./apps/sales",
+      "resident": true
     },
     {
       "name": "inventory", 
@@ -10,11 +11,13 @@
     },
     {
       "name": "reports",
-      "path": "./apps/reports"
+      "path": "./apps/reports",
+      "resident": false
     },
     {
       "name": "dashboard",
-      "path": "./apps/dashboard"
+      "path": "./apps/dashboard",
+      "resident": true
     }
   ],
   "starting_port": 3001,
