Add comprehensive R package documentation
- Enhanced roxygen2 documentation for start_tss() with detailed examples
- Added package-level documentation with getting started guide
- Created config-format help topic explaining JSON configuration structure
- Added example-config help topic for the included example configuration
- Generated complete man/ directory with 4 .Rd files:
  * start_tss.Rd - Main function documentation
  * tinyshinyserver-package.Rd - Package overview and features
  * config-format.Rd - Configuration file format reference
  * example-config.Rd - Example configuration documentation

Users can now access help via ?start_tss, ?config-format, etc.

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -38,3 +38,4 @@ Suggests:
 Config/testthat/edition: 3
 URL: https://example.com/tinyshinyserver
 BugReports: https://example.com/tinyshinyserver/issues
+RoxygenNote: 7.3.3
