Update all GitHub URLs to use lab1702 username
- DESCRIPTION: Update URL and BugReports to github.com/lab1702/tiny-shiny-server
- README.md: Replace all 'your-username' placeholders with 'lab1702'
- Regenerated roxygen documentation with correct URLs
- Package now ready for GitHub hosting at github.com/lab1702/tiny-shiny-server

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -36,6 +36,6 @@ Suggests:
     roxygen2,
     devtools
 Config/testthat/edition: 3
-URL: https://example.com/tinyshinyserver
-BugReports: https://example.com/tinyshinyserver/issues
+URL: https://github.com/lab1702/tiny-shiny-server
+BugReports: https://github.com/lab1702/tiny-shiny-server/issues
 RoxygenNote: 7.3.3
