fix: update example config.json paths to use examples/ instead of apps/
- Changed all app paths from ./apps/ to ./examples/
- This matches the actual directory structure when examples are copied
- Fixes app startup failures when running examples

--- a/inst/examples/config.json
+++ b/inst/examples/config.json
@@ -2,21 +2,21 @@
   "apps": [
     {
       "name": "sales",
-      "path": "./apps/sales",
+      "path": "./examples/sales",
       "resident": true
     },
     {
       "name": "inventory", 
-      "path": "./apps/inventory"
+      "path": "./examples/inventory"
     },
     {
       "name": "reports",
-      "path": "./apps/reports",
+      "path": "./examples/reports",
       "resident": false
     },
     {
       "name": "dashboard",
-      "path": "./apps/dashboard",
+      "path": "./examples/dashboard",
       "resident": true
     }
   ],
