--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -3,7 +3,7 @@ Type: Package
 Title: Tiny Shiny Server - Lightweight Multi-App Shiny Proxy
 Version: 0.1.0
 Authors@R: c(
-    person(given = "Author", family = "Name", role = c("aut", "cre"), email = "author@example.com")
+    person(given = "Lars", family = "Bernhardsson", role = c("aut", "cre"), email = "cran.sherry228@passinbox.com")
     )
 Description: A lightweight, WebSocket-enabled proxy server for hosting multiple
     Shiny applications with automatic health monitoring, session management,
